2011-08-19 v.0.3.0
* Fix for pluralization key removal

2011-08-19 v.0.2.9
* Versioin update due to the wrong gem push

2011-08-19 v.0.2.8
* Standard I18n Pluralization module is recognized

2011-05-24 v.0.2.7
* Bug with filename prefix fixed

2011-04-14 v.0.2.6
* Fogotten debug output removed

2011-04-05 v.0.2.5
* Bug with filename parsing fixed

2011-03-25 v.0.2.4
* Action translatons:remove added

2011-03-22 v. 0.2.3
* translatons:move does not keep the last key of KEY parameter. This gives the ability to rename the last key.

2011-03-16 v. 0.2.0
* Misspelling corrected