@@ -4,12 +4,11 @@ require 'fileutils'
 
 from = File.join(File.split(Gem.bin_path('translations_sync')).first,
                  '..', 'lib', 'tasks', '*.rake')
-to = File.expand_path('.', File.join('lib', 'tasks'))
-environment = File.expand_path('.', File.join('config', 'environment.rb'))
+to = ARGV[0] || File.expand_path('.', File.join('lib', 'tasks'))
 
-if File.directory? to and File.exists? environment
+if File.directory? to
   FileUtils.cp Dir.glob(from), to
   puts "Rake file are copied to #{to}"
 else
-  puts 'You must run it from within the rails directory'
+  puts "Directory #{to} is missing"
 end
