@@ -1,3 +1,6 @@
+2012-09-19 v.0.3.1
+* Rakfile should not be copied if using rails. Do not forget to remove the old one!
+
 2011-08-19 v.0.3.0
 * Fix for pluralization key removal
 
